--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
           </div>
           <div class="features-section">
             <div class="container">
+                <div class="features-section__content">
                 <div class="features-section__title">
+                    Features
+                    </div>
                     <div class="features-section__cards">
                         <div class="features-section__item">
                             <div class="features-section__item-image">
@@ -72,9 +75,9 @@
                             <div class="features-section__item-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper velit tortor, in accumsan libero mollis eu. Sed vel eros et dolor... 
                             </div>
-                            <div class="features-section__item-link">
+                            <a href="#" class="features-section__item-link">
                                 Read more >
-                            </div>
+                            </a>
                         </div>
                         <div class="features-section__item">
                             <div class="features-section__item-image">
@@ -86,9 +89,9 @@
                             <div class="features-section__item-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper velit tortor, in accumsan libero mollis eu. Sed vel eros et dolor... 
                             </div>
-                            <div class="features-section__item-link">
+                            <a href="#" class="features-section__item-link">
                                 Read more >
-                            </div>
+                            </a>
                         </div>
                         <div class="features-section__item">
                             <div class="features-section__item-image">
@@ -100,9 +103,9 @@
                             <div class="features-section__item-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper velit tortor, in accumsan libero mollis eu. Sed vel eros et dolor... 
                             </div>
-                            <div class="features-section__item-link">
+                            <a href="#" class="features-section__item-link">
                                 Read more >
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -111,13 +114,23 @@
         </main>
         <footer class="footer-section">
           <div class="container">
-            <div class="footer-about__section">© 2021 Wisdom page</div>
+              <div class="footer-section__content">
+            <div class="footer-about__section">© 2021 
+                <a class="footer-about__info" href="">Wisdom page</a>
+             </div>
             <div class="icon-section">
-              <i class="fab fa-twitter-square"></i>
-              <i class="fab fa-instagram-square"></i>
-              <i class="fab fa-linkedin"></i>
+                <a class="asd" class="lox" href="#">
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                </a>
+                <a class="asd" href="#">
+                    <i class="fab fa-instagram-square fa-2x"></i>
+                </a>
+                <a class="asd" href="#">
+                    <i class="fab fa-linkedin fa-2x" ></i>
+                </a>
             </div>
           </div>
+        </div>
         </footer>
       </div>
   </body>
