--- a/index.html
+++ b/index.html
@@ -14,124 +14,130 @@
   </head>
   <body>
     <div class="wrapper">
-        <header class="header-section">
-          <div class="container">
-            <div class="header-section__logo">
-              <div class="section__logo-item">Windom</div>
-              <div class="section__logo-item">Page</div>
-            </div>
-            <nav class="header-section__menu">
-              <a href="#" class="header-section__menu-item">Home</a>
-              <a href="#" class="header-section__menu-item">About</a>
-              <a href="#" class="header-section__menu-item">Features</a>
-            </nav>
+      <header class="header-section">
+        <div class="container">
+          <div class="header-section__logo">
+            <div class="section__logo-item">Windom</div>
+            <div class="section__logo-item">Page</div>
           </div>
-        </header>
-        <main class="main-section">
-          <div class="hero-section">
-            <div class="container">
-                <h2 class="hero-section-title">
-                    Knowledge has a begining
-                    but no end
-                </h2>
-            </div>
-          </div>
-          <div class="about-section">
-            <div class="container">
-                <div class="about-content">
-                <div class="about-section__title">
-                    About
-                </div>
-                <div class="about-section__content">
-                    <div class="about-section__description">
-                        <div class="about-section__description-subtitle">
-                            Content subtitle
-                        </div>
-                        <div class="about-section__description-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        </div>
-                    </div>
-
-                        <img src="./img/about-image.jpg" alt="about-image">
-
-                </div>
-            </div>
+          <nav class="header-section__menu">
+            <a href="#" class="header-section__menu-item">Home</a>
+            <a href="#" class="header-section__menu-item">About</a>
+            <a href="#" class="header-section__menu-item">Features</a>
+          </nav>
         </div>
+      </header>
+      <main class="main-section">
+        <div class="hero-section">
+          <div class="container">
+            <h1 class="hero-section-title">
+              Knowledge has a begining but no end
+            </h1>
           </div>
-          <div class="features-section">
-            <div class="container">
-                <div class="features-section__content">
-                <div class="features-section__title">
-                    Features
-                    </div>
-                    <div class="features-section__cards">
-                        <div class="features-section__item">
-                            <div class="features-section__item-image">
-                                <img src="./img/card-image.jpg" alt="card-image-1">
-                            </div>
-                            <div class="features-section__item-title">
-                                Card title
-                            </div>
-                            <div class="features-section__item-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper velit tortor, in accumsan libero mollis eu. Sed vel eros et dolor... 
-                            </div>
-                            <a href="#" class="features-section__item-link">
-                                Read more >
-                            </a>
-                        </div>
-                        <div class="features-section__item">
-                            <div class="features-section__item-image">
-                                <img src="./img/card-image-1.jpg" alt="card-image-2">
-                            </div>
-                            <div class="features-section__item-title">
-                                Card title
-                            </div>
-                            <div class="features-section__item-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper velit tortor, in accumsan libero mollis eu. Sed vel eros et dolor... 
-                            </div>
-                            <a href="#" class="features-section__item-link">
-                                Read more >
-                            </a>
-                        </div>
-                        <div class="features-section__item">
-                            <div class="features-section__item-image">
-                                <img src="./img/card-image-2.jpg" alt="card-image-3">
-                            </div>
-                            <div class="features-section__item-title">
-                                Card title
-                            </div>
-                            <div class="features-section__item-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ullamcorper velit tortor, in accumsan libero mollis eu. Sed vel eros et dolor... 
-                            </div>
-                            <a href="#" class="features-section__item-link">
-                                Read more >
-                            </a>
-                        </div>
-                    </div>
+        </div>
+        <div class="about-section">
+          <div class="container">
+            <div class="about-content">
+              <h2 class="about-section__title">About</h2>
+              <div class="about-section__content">
+                <div class="about-section__description">
+                  <h3 class="about-section__description-subtitle">
+                    Content subtitle
+                  </h3>
+                  <div class="about-section__description-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur.
+                  </div>
                 </div>
+
+                <img src="./img/about-image.jpg" alt="about-image" />
+              </div>
             </div>
           </div>
-        </main>
-        <footer class="footer-section">
+        </div>
+        <div class="features-section">
           <div class="container">
-              <div class="footer-section__content">
-            <div class="footer-about__section">© 2021 
-                <a class="footer-about__info" href="">Wisdom page</a>
-             </div>
+            <div class="features-section__content">
+              <h2 class="features-section__title">Features</h2>
+              <div class="features-section__cards">
+                <div class="features-section__item">
+                  <div class="features-section__item-image">
+                    <img src="./img/card-image.jpg" alt="card-image-1" />
+                  </div>
+                  <h3 class="features-section__item-title">Card title</h3>
+                  <div class="features-section__item-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Curabitur ullamcorper velit tortor, in accumsan libero
+                    mollis eu. Sed vel eros et dolor...
+                  </div>
+                  <a href="#" class="features-section__item-link">
+                    <span class="features-section__link-text">
+                      Read more ></span
+                    >
+                  </a>
+                </div>
+                <div class="features-section__item">
+                  <div class="features-section__item-image">
+                    <img src="./img/card-image-1.jpg" alt="card-image-2" />
+                  </div>
+                  <h3 class="features-section__item-title">Card title</h3>
+                  <div class="features-section__item-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Curabitur ullamcorper velit tortor, in accumsan libero
+                    mollis eu. Sed vel eros et dolor...
+                  </div>
+                  <a href="#" class="features-section__item-link">
+                    <span class="features-section__link-text">
+                      Read more ></span
+                    >
+                  </a>
+                </div>
+                <div class="features-section__item">
+                  <div class="features-section__item-image">
+                    <img src="./img/card-image-2.jpg" alt="card-image-3" />
+                  </div>
+                  <h3 class="features-section__item-title">Card title</h3>
+                  <div class="features-section__item-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Curabitur ullamcorper velit tortor, in accumsan libero
+                    mollis eu. Sed vel eros et dolor...
+                  </div>
+                  <a href="#" class="features-section__item-link">
+                    <span class="features-section__link-text">
+                      Read more ></span
+                    >
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer class="footer-section">
+        <div class="container">
+          <div class="footer-section__content">
+            <div class="footer-about__section">
+              © 2021
+              <a class="footer-about__info" href="">Wisdom page</a>
+            </div>
             <div class="icon-section">
-                <a class="asd" class="lox" href="#">
-                    <i class="fab fa-twitter-square fa-2x"></i>
-                </a>
-                <a class="asd" href="#">
-                    <i class="fab fa-instagram-square fa-2x"></i>
-                </a>
-                <a class="asd" href="#">
-                    <i class="fab fa-linkedin fa-2x" ></i>
-                </a>
+              <a class="asd"  href="#">
+                <i class="fab fa-twitter-square fa-2x"></i>
+              </a>
+              <a class="asd" href="#">
+                <i class="fab fa-instagram-square fa-2x"></i>
+              </a>
+              <a class="asd" href="#">
+                <i class="fab fa-linkedin fa-2x"></i>
+              </a>
             </div>
           </div>
         </div>
-        </footer>
-      </div>
+      </footer>
+    </div>
   </body>
 </html>
